# whistle

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
android-demo/: settings.gradle.kts
android-demo/app/: build.gradle.kts
blog/: training-a-wake-word.md
configs/: default.yaml  heybubba.yaml  owww.yaml
models/baseline-v1/: README.md
models/baseline-v1/checkpoints/: best.pt  eval_test.json
models/baseline-v1/exports/: mel_filterbank.npy  wakeword_audio.int8.onnx  wakeword_audio.onnx  wakeword_audio.onnx.data  wakeword_mel.int8.onnx  wakeword_mel.onnx  wakeword_mel.onnx.data
models/baseline-v2/: README.md
models/baseline-v2/checkpoints/: best.pt  eval_test.json
models/baseline-v2/exports/: metadata.json  wakeword_audio.onnx  wakeword_audio.onnx.data  wakeword_audio.single.onnx  wakeword_mel.int8.onnx  wakeword_mel.onnx  wakeword_mel.onnx.data
models/baseline-v3/: README.md
models/baseline-v3/checkpoints/: best.pt  eval_test.json
models/baseline-v3/exports/: wakeword_audio.onnx  wakeword_audio.onnx.data  wakeword_mel.int8.onnx  wakeword_mel.onnx  wakeword_mel.onnx.data
models/baseline-v4/: README.md
models/baseline-v4/checkpoints/: best.pt  eval_test.json
models/baseline-v4/exports/: classifier.int8.onnx  classifier.onnx  classifier.onnx.data  metadata.json
models/baseline-v5/: README.md  training_config.yaml
models/baseline-v5/exports/: hey_bubba_v0.1.onnx
scripts/: probe_mic.py  record_positives.py  stream_onnx_mic.py  stream_owww_mic.py  stream_owww_stock.py  stream_owww_trained.py
src/whistle/: __init__.py  cli.py  config.py  eval.py  export.py  features.py  smoke.py  stream.py  train.py
tests/: test_pipeline.py
(+18 files in other folders)
